--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="relogiostyle.css">
 </head>
 <body>
-    <h1 id="horario"></h1>
+    <h1 id="horário"></h1>
     <h2 id="dia"></h2>
 
     <script src="relogioscript.js"></script>
